# ArcSolver

./: .gitignore  .gitmodules  .python-version  README.md  analyse_bs.py  analyse_solutions.py  deployment.py  eval_taskset.py  fix_inference.py  gpu_test.py  inference.py  new_model.py  norm_analysis.py  particle_deployment.py  play.py  pyproject.toml  references.md  remote_sync.sh  single_batch.py  solve.py  solver.py  submit.py  sweeps.py  test_infer.py  todos.md  train.py
deployment/: colors_counter.py  diff_solvers.py  main.py  sklearn_tree.py  symmetry_repair.py
scripts/: create_dataset.py  synth_data_gen.py
scripts/attention_visualisation/: attn_analysis.py
src/: arc_hparams.py  arc_trainer.py  arc_trainer1.py  attention_vis.py  curriculum.py  data_loading_speed.py  dataset.py  dataset1.py  debug_utils.py  deploy_utils.py  focal_bce.py  focal_crossentropy.py  focal_loss.py  inference.py  interpreter.py  interpreter2.py  interpreter_old.py  lazy_adam.py  lazy_adamw.py  lr_scheduler.py  lrscheduler.py  mask_utils.py  multilevel_loss.py  particle_solver.py  repl.py  rope.py  rope2d.py  rope_2d.py  solver.py  task.py  task1.py  tokenizer.py  trainer.py  utils.py
tests/: 2d_rope.py  LR_vis.py  add_non_jit_methods_repl.py  archparams_migrate.py  arctrainer_migrate.py  data_loading_speed.py  enc_dec_mask.py  fix_greedy.py  lambdalrwithplateau.py  misc_repl_tests.py  rope_2d_grid.py  rope_2d_non_hom.py  rope_2d_verify.py  sep_enc_dec_repl_wip.py  single_batch_train.py  state_agg_test.py  test_min_max_norm_adam.py  test_rope.py  tokenization_test.py
(+4413 files in other folders)
