[tool.poetry]
name = "arcsolver"
version = "1.0"
description = "Abhitopia's take on how to solve ArcChallenge"
authors = ["abhitopia <abhitopia@isme.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
numpy = "^2.0.1"
tensorboard = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
